feat: 💫️图片点击放大效果新增

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -3,6 +3,8 @@ mainSections = ["posts"]
 # Output page's full content in RSS.
 rssFullContent = true
 
+fancybox = true
+
 [footer]
 since = 2020
 customText = ""
